# design-patterns

./: .gitignore
Abstract Factory Pattern/: CMakeLists.txt  Readme.md
Abstract Factory Pattern/src/: AbstractFactory.h  FactoryProducer.h  RoundedRectangle.h  RoundedShapeFactory.h  RoundedSquare.h  ShapeFactory.h  main.cpp
Builder Pattern/: CMakeLists.txt  Readme.md
Builder Pattern/src/: Bottle.h  Burger.h  ChickenBurger.h  Coke.h  CoolDrink.h  Item.h  Meal.h  MealBuilder.h  Packing.h  Pepsi.h  VegBurger.h  Wrapper.h  main.cpp
Factory Pattern/: CMakeLists.txt  Readme.md
Factory Pattern/src/: Circle.h  Rectangle.h  Shape.h  ShapeFactory.h  Square.h  main.cpp
Singleton Pattern/: CMakeLists.txt  Readme.md
Singleton Pattern/src/: SingleObject.h  main.cpp
